--- a/templates/base.html
+++ b/templates/base.html
@@ -35,25 +35,28 @@
 </title>
   </head>
   <body class="container-fluid">
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="/">EventTime</a>
-      <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ml-auto">
-              {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'perfil' %}">Evento</a>
-            </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{% url 'logout' %}">Sair</a>
-                  </li>
-              {% else %}
-                  <li class="nav-item">
-                      <a class="nav-link" href="{% url 'login' %}">Login</a>
-                  </li>
-              {% endif %}
-          </ul>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+
+        </ul>
+        {% if user.is_authenticated %}
+        <a class="nav-link" href="{% url 'perfil' %}" style="color: aliceblue;">Evento</a>
+      
+  
+        <a class="nav-link" href="{% url 'logout' %}">Sair</a>
+        {% else %}
+        <a class="nav-link" href="{% url 'login' %}">Login</a>
+        {% endif %}
       </div>
-  </nav>
+    </nav>
+
+
     {% block 'body' %}
 	{% endblock %}
 
