--- a/Core/templates/shared.html
+++ b/Core/templates/shared.html
@@ -1,9 +1,28 @@
 <!-- profile.html -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Eventime - Contador de Segundos para Eventos Especiais" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="#" />
+    <meta property="og:url" content="https://www.eventime.com" />
+    <meta property="og:site_name" content="EventTime" />
+    <meta property="og:description"
+          content="Com o Eventime, acompanhe cada segundo até os momentos mais importantes da sua vida. Personalize contadores de eventos especiais e compartilhe com amigos e familiares." />
+    <meta name="Title" content="Eventime - Contador de Segundos para Eventos Especiais" />
+          <meta name="Author" content="Vitor Gomes" />
+          <meta name="description"
+                content="Com o Eventime, você pode criar contadores personalizados para eventos especiais e compartilhá-los. Conte cada segundo até os momentos que importam.">
+          <meta name="KeyWords"
+                content="contador de eventos, contagem regressiva, cronômetro de eventos, eventos especiais, timer, dias, horas, minutos, segundos, personalização de eventos" />
+          <meta name="generator" content="Django" />
+          <meta name="Language" CONTENT="Portuguese" />
+          <meta name="Rating" CONTENT="General" />
+          <meta name="Doc-class" CONTENT="Completed" />
     <title>Esta Chegando</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
