--- a/templates/base.html
+++ b/templates/base.html
@@ -1,28 +1,27 @@
 {% load static %}
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Mundo Colorido Kids" />
+    <meta property="og:title" content="Eventime - Contador de Segundos para Eventos Especiais" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="#" />
-    <meta property="og:url" content="." />
-    <meta property="og:site_name" content="Mundo Colorido Kids" />
+    <meta property="og:url" content="https://www.eventime.com" />
+    <meta property="og:site_name" content="EventTime" />
     <meta property="og:description"
-          content="Explore o mundo colorido da criatividade com desenhos para colorir do Mundo Colorido Kids. Deixe as crianças expressarem sua imaginação com nossa vasta coleção de desenhos divertidos e educativos." />
-    <meta name="Title"
-          content="Mundo Colorido Kids" />
+          content="Com o Eventime, acompanhe cada segundo até os momentos mais importantes da sua vida. Personalize contadores de eventos especiais e compartilhe com amigos e familiares." />
+    <meta name="Title" content="Eventime - Contador de Segundos para Eventos Especiais" />
           <meta name="Author" content="Vitor Gomes" />
           <meta name="description"
-                content="Explore o mundo colorido da criatividade com desenhos para colorir do Mundo Colorido Kids. Deixe as crianças expressarem sua imaginação com nossa vasta coleção de desenhos divertidos e educativos.">
+                content="Com o Eventime, você pode criar contadores personalizados para eventos especiais e compartilhá-los. Conte cada segundo até os momentos que importam.">
           <meta name="KeyWords"
-                content="desenhos para colorir, crianças, atividades infantis, educação, criatividade, diversão, aprendizado" />
-          <meta name="generator" content="Microsoft FrontPage 5.0" />
+                content="contador de eventos, contagem regressiva, cronômetro de eventos, eventos especiais, timer, dias, horas, minutos, segundos, personalização de eventos" />
+          <meta name="generator" content="Django" />
           <meta name="Language" CONTENT="Portuguese" />
-          <meta name="Rating" CONTENT="Safe For Kids" />
+          <meta name="Rating" CONTENT="General" />
           <meta name="Doc-class" CONTENT="Completed" />
 
           {% block 'head' %}
