--- a/Core/templates/nova.html
+++ b/Core/templates/nova.html
@@ -23,14 +23,14 @@
               
                     <div class="mb-3">
                       <label for="formFile" class="form-label">Escolha o arquivo...</label>
-                      <input class="input-group mb-3" type="file" id="file"  name="file" required>
+                      <input class="input-group mb-3" type="file" id="file"  name="file" accept="image/png, image/jpeg" required>
                     </div>
                     
                 
             </div>
 
                         <!-- Display messages -->
-            <div id='message-upload' class="alert alert-primary text-center" role="alert">
+            <div id='message-upload' class="alert alert-primary text-center" role="alert" >
             </div>
 
             <!-- Progress bar -->
@@ -50,5 +50,7 @@
         </div>
     </div>
 </div>
+
+
 
 {% endblock %}
