--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -196,8 +196,8 @@
 </div>
 
   <div class="hero">
-    <h1>Crie seu Contador de Eventos Personalizado</h1>
-    <p>Personalize, compartilhe e acompanhe seus eventos de maneira fácil e intuitiva. Perfeito para eventos especiais!</p>
+    <h1>Crie Seu Contador de Eventos Personalizado</h1>
+    <p>Personalize, compartilhe e acompanhe seus eventos de forma simples e intuitiva. Ideal para momentos especiais!</p>
     <a href="#cards"><img width="100" height="100" src="{% static 'down_16046465.gif' %}" alt="chevron-down"/></a>
 </div>
 
@@ -208,8 +208,8 @@
         <!-- Card 1 -->
         <div class="col-md-3">
             <div class="card">
-                <h5 class="card-title">Passo 1: Crie seu Usuario</h5>
-                <p class="card-text">Apos Pagar e criar o seu usuario, Escolha uma data e o título do seu evento. Seu contador começará a contagem automaticamente.</p>
+                <h5 class="card-title">Passo 1: Crie seu Usuário</h5>
+                <p class="card-text">Após o pagamento, crie seu usuário, escolha uma data e o título do seu evento. O contador começará automaticamente.</p>
                 <div class="text-center">
                 <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/add-user-male.png" alt="add-user-male"/>
             </div>
@@ -218,18 +218,18 @@
         <!-- Card 2 -->
         <div class="col-md-3">
             <div class="card">
-                <h5 class="card-title">Passo 2: Personalize seu contador</h5>
-                <p class="card-text">Escolha as cores e Foto que deseja para o contador. Torne seu evento único e visualmente agradável.</p>
+                <h5 class="card-title">Passo 2: Personalize seu Contador</h5>
+                <p class="card-text">Escolha as cores e a foto para o contador. Deixe seu evento único e visualmente atraente.</p>
                 <div class="text-center">
-                    <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/hourglass--v1.png" alt="hourglass--v1"/>
+                    <img width="50" height="50" src="https://img.icons8.com/pastel-glyph/64/create-new--v3.png" alt="create-new--v3"/>
                 </div>
             </div>
         </div>
         <!-- Card 3 -->
         <div class="col-md-3">
             <div class="card">
-                <h5 class="card-title">Passo 3: Compartilhe com seus amigos</h5>
-                <p class="card-text">Após configurar seu contador, compartilhe o link com amigos e familiares para que todos possam acompanhar o evento.</p>
+                <h5 class="card-title">Passo 3: Compartilhe com Seus Amigos</h5>
+                <p class="card-text">Depois de configurar o contador, compartilhe o link com amigos e familiares para que todos possam acompanhar o evento.</p>
             <div class="text-center">
                 <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/forward-arrow.png" alt="forward-arrow"/>
             </div>
