--- a/Core/templates/nova.html
+++ b/Core/templates/nova.html
@@ -23,7 +23,7 @@
               
                     <div class="mb-3">
                       <label for="formFile" class="form-label">Escolha o arquivo...</label>
-                      <input class="input-group mb-3" type="file" id="file"  name="file" accept="image/png, image/jpeg" required>
+                      <input class="input-group mb-3" type="file" id="file"  name="file" accept="image/png, image/jpeg, image/gif, image/webp, image/tiff, image/svg, video/mp4, video/webm" required>
                     </div>
                     
                 
