--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -165,7 +165,7 @@
                 <label for="id_font_color">Font color: </label>
                 <input type="color" name="font_color"  maxlength="7" oninput="updateMockup()" value="#F8F8FF" required="" id="id_font_color">
                 <label for="id_background_color">Background color:</label>
-                <input type="color" name="background_color"  maxlength="7" oninput="updateMockup()" value="#836FFF" id="id_background_color">
+                <input type="color" name="background_color"  maxlength="7" oninput="updateMockup()" value="#fff" id="id_background_color">
                 </div>
                 <label for="inputText">Texto:</label>
                 <input type="text" id="inputText" class="form-control" oninput="updateMockup()" placeholder="Digite seu texto">
