--- a/Core/templates/shared.html
+++ b/Core/templates/shared.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="#">
+    <link rel="icon" href="https://img.icons8.com/stickers/50/hourglass.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Eventime - Contador de Segundos para Eventos Especiais" />
     <meta property="og:type" content="website" />
