--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,15 @@
           <meta name="Language" CONTENT="Portuguese" />
           <meta name="Rating" CONTENT="General" />
           <meta name="Doc-class" CONTENT="Completed" />
+          <!-- Google tag (gtag.js) -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=G-6NR8DJH4P7"></script>
+          <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
+            gtag('config', 'G-6NR8DJH4P7');
+          </script>
           {% block 'head' %}
           {% endblock %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
