--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -168,7 +168,7 @@
                 <input type="color" name="background_color"  maxlength="7" oninput="updateMockup()" value="#fff" id="id_background_color">
                 </div>
                 <label for="inputText">Texto:</label>
-                <input type="text" id="inputText" class="form-control" oninput="updateMockup()" placeholder="Digite seu texto">
+                <input type="text" id="inputText" class="form-control" placeholder="Digite seu texto">
             </div>
             <div class="input-group">
                 <label for="inputDate">Data:</label>
