--- a/Core/templates/emails/email.html
+++ b/Core/templates/emails/email.html
@@ -21,8 +21,11 @@
                             <h1>Bem-vindo ao EventTime!</h1>
                             <p>Olá, {{customer_name}},</p>
                             <p>Estamos muito felizes em ter você com a gente! Agora você pode começar a usar o EventTime para contar os segundos até seus eventos especiais.</p>
+                            {% if usuario %}
+                            <p>Segue usuario:{{usuario}} de senha:{{password}}</p>
+                            {% endif%}
                             <p>Clique no link abaixo para acessar sua conta e começar:</p>
-                            <a href="https://eventtime.com.br" class="btn btn-primary" style="background-color: #007bff; padding: 10px 20px; color: white; text-decoration: none;">Acessar EventTime</a>
+                            <a href="https://eventtime.com.br/login/" class="btn btn-primary" style="background-color: #007bff; padding: 10px 20px; color: white; text-decoration: none;">Acessar EventTime</a>
                             <hr>
                             <br>
                             <p>Se precisar de ajuda, entre em contato com a nossa equipe de suporte.</p>
