--- a/Core/templates/emails/email.html
+++ b/Core/templates/emails/email.html
@@ -22,7 +22,7 @@
                             <p>Olá, {{customer_name}},</p>
                             <p>Estamos muito felizes em ter você com a gente! Agora você pode começar a usar o EventTime para contar os segundos até seus eventos especiais.</p>
                             {% if usuario %}
-                            <p>Segue usuario:{{usuario}} </p>
+                            <p>Segue Usuário:{{usuario}} </p>
                             <p>senha:{{password}}</p>
                             {% endif%}
                             <p>Clique no link abaixo para acessar sua conta e começar:</p>
@@ -33,12 +33,14 @@
                             <p>Obrigado por escolher o EventTime!</p>
                         </td>
                     </tr>
+                    <!-- 
                     <tr>
                         <td class="text-center" style="padding: 20px;">
                             <p>Este email foi enviado para {{customer_email}}</p>
                             <p>Se você não quer mais receber este tipo de email, clique <a href="" target="_blank" rel="noopener noreferrer">aqui</a> para cancelar.</p>
                         </td>
                     </tr>
+                    -->
                     <tr>
                         <td style="text-align: center; padding: 20px; background-color: #f7f7f7;">
                             &copy; 2024 EventTime. Todos os direitos reservados.
