--- a/Core/templates/shared.html
+++ b/Core/templates/shared.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="https://img.icons8.com/stickers/50/hourglass.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Eventime - Contador de Segundos para Eventos Especiais" />
+    <meta property="og:title" content="Eventime - Acompanhe Meu Evento no Eventime!" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="#" />
     <meta property="og:url" content="https://www.eventime.com" />
     <meta property="og:site_name" content="EventTime" />
     <meta property="og:description"
-          content="Com o Eventime, acompanhe cada segundo até os momentos mais importantes da sua vida. Personalize contadores de eventos especiais e compartilhe com amigos e familiares." />
+          content="Você pode acompanhar meu evento especial e contar cada segundo até o grande dia!" />
     <meta name="Title" content="Eventime - Contador de Segundos para Eventos Especiais" />
           <meta name="Author" content="Vitor Gomes" />
           <meta name="description"
