--- a/Core/templates/shared.html
+++ b/Core/templates/shared.html
@@ -13,10 +13,10 @@
     <meta property="og:site_name" content="EventTime" />
     <meta property="og:description"
           content="Você pode acompanhar meu evento especial e contar cada segundo até o grande dia!" />
-    <meta name="Title" content="Eventime - Contador de Segundos para Eventos Especiais" />
+    <meta name="Title" content="Eventime - Acompanhe Meu Evento no Eventime!" />
           <meta name="Author" content="Vitor Gomes" />
           <meta name="description"
-                content="Com o Eventime, você pode criar contadores personalizados para eventos especiais e compartilhá-los. Conte cada segundo até os momentos que importam.">
+                content="Você pode acompanhar meu evento especial e contar cada segundo até o grande dia!">
           <meta name="KeyWords"
                 content="contador de eventos, contagem regressiva, cronômetro de eventos, eventos especiais, timer, dias, horas, minutos, segundos, personalização de eventos" />
           <meta name="generator" content="Django" />
