--- a/Core/templates/checkout.html
+++ b/Core/templates/checkout.html
@@ -1,4 +1,7 @@
+
 {% extends 'base.html' %}
+{% block 'title' %}Checkout
+{% endblock %}
 {% block 'head' %}
 <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
 {% endblock %}
