--- a/Core/templates/login.html
+++ b/Core/templates/login.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block 'title' %}Login
+{% endblock %}
 {% block 'body' %}
 <div class="d-flex justify-content-center align-items-center" style="margin: 80px;">
 
