--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block 'title' %}Eventtime
+{% endblock %}
+
 {% block 'head' %}
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
