--- a/Core/templates/nova.html
+++ b/Core/templates/nova.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block 'title' %}Upload
+{% endblock %}
 
 {% block 'head' %}
 <script src="{% static 'django_multiple_chunk_upload/js/chunk_upload.js' %}"></script>
