--- a/Core/templates/profile.html
+++ b/Core/templates/profile.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block 'title' %}Perfil
+{% endblock %}
+
 {% block 'body' %}
 
     <div class="justify-content-center align-items-center" style="display: grid; margin-top: 15px;">
