--- a/Core/templates/shared.html
+++ b/Core/templates/shared.html
@@ -23,7 +23,7 @@
           <meta name="Language" CONTENT="Portuguese" />
           <meta name="Rating" CONTENT="General" />
           <meta name="Doc-class" CONTENT="Completed" />
-    <title>Esta Chegando</title>
+    <title>Acompanhe</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Estiliza o body para centralizar o conteúdo */
