--- a/templates/base.html
+++ b/templates/base.html
@@ -24,13 +24,13 @@
           <meta name="Rating" CONTENT="General" />
           <meta name="Doc-class" CONTENT="Completed" />
           <!-- Google tag (gtag.js) -->
-          <script async src="https://www.googletagmanager.com/gtag/js?id=G-6NR8DJH4P7"></script>
+          <script async src="https://www.googletagmanager.com/gtag/js?id=G-JV8YZKQ6ME"></script>
           <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'G-6NR8DJH4P7');
+            gtag('config', 'G-JV8YZKQ6ME');
           </script>
           {% block 'head' %}
           {% endblock %}
