--- a/templates/base.html
+++ b/templates/base.html
@@ -23,25 +23,14 @@
           <meta name="Language" CONTENT="Portuguese" />
           <meta name="Rating" CONTENT="General" />
           <meta name="Doc-class" CONTENT="Completed" />
-          <!-- Google tag (gtag.js)  ads --> 
-          <script async src="https://www.googletagmanager.com/gtag/js?id=G-JV8YZKQ6ME"></script>
-          <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'G-JV8YZKQ6ME');
+          <!-- Google Tag Manager -->
+          <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-TBHQBKS4');</script>
+            <!-- End Google Tag Manager -->
           </script>
-
-          <!-- Google tag (gtag.js) analitcs -->
-          <script async src="https://www.googletagmanager.com/gtag/js?id=G-6NR8DJH4P7"></script>
-          <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'G-6NR8DJH4P7');
-</script>
           {% block 'head' %}
           {% endblock %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -52,7 +41,10 @@
 </title>
   </head>
   <body class="container-fluid">
-
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBHQBKS4"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="/">EventTime ⌛</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
