--- a/Core/templates/login.html
+++ b/Core/templates/login.html
@@ -4,7 +4,7 @@
 {% block 'body' %}
 <div class="d-flex justify-content-center align-items-center" style="margin: 80px;">
 
-    <div class="card text-center" style="width: 25rem;">
+    <div class=" text-center" style="width: 25rem;">
         {% if messages %}
         <ul class="messages text-center" style="list-style-type: none; padding: 0; margin-top: 10px;">
             {% for message in messages %}
@@ -33,7 +33,7 @@
                 {{ form.password }}
             </div>
             <button type="submit" class="btn btn-primary">Entrar</button>
-            <a type="button" href="{% url 'password_reset'%}">Esqueceu sua senha?</a>
+            <a class="row text-center" type="button" href="{% url 'password_reset'%}">Esqueceu a senha?</a>
         </form>
     </div>
 </div>
