--- a/Core/templates/profile.html
+++ b/Core/templates/profile.html
@@ -6,7 +6,7 @@
 {% block 'body' %}
 
     <div class="justify-content-center align-items-center" style="display: grid; margin-top: 15px;">
-        <div class="card text-center" style="height: 25rem;">
+        <div class="card text-center">
         <h1>Personalize!</h1>
         <form method="post" enctype="multipart/form-data">
             <div id='message-upload' class="alert-primary"></div>
