ajuste pagamento e evento

--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -187,9 +187,9 @@
     <!-- Mockup de Smartphone -->
     <div class="mockup">
         <div class="screen" id="screen">
-            <img id="mockupImage" src="https://via.placeholder.com/150" alt="Imagem do evento">
-            <h4 id="mockupText">Texto aparecerá aqui</h4>
-            <div id="mockupCountdown">Contagem regressiva aparecerá aqui</div>
+            <img id="mockupImage" src="https://img.freepik.com/fotos-gratis/mulher-loira-de-aparencia-agradavel-e-engracada-no-carrinho-de-compras-com-baloes-de-modelagem-longos-e-bola-de-discoteca-usa-vestido-e-sapatos-esportivos-olha-para-a-camera-com-os-labios-dobrados-se-diverte-em-uma-festa-barulhenta-com-os-colegas_273609-26815.jpg?t=st=1730479398~exp=1730482998~hmac=8621eb6d263bf5a91b4e7f10a13cf36bf27d0647d2390ec2366d888a859c8ff3&w=1380" alt="Imagem do evento">
+            <h4 id="mockupText">Minha Festa Esta Chegando!!!!</h4>
+            <div id="mockupCountdown">Contagem regressiva aqui</div>
         </div>
     </div>
 </div>
