--- a/Core/templates/profile.html
+++ b/Core/templates/profile.html
@@ -4,6 +4,39 @@
 {% endblock %}
 
 {% block 'body' %}
+<style>
+            /* Estilos para os confetes */
+            .confetti {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 9999;
+            overflow: hidden;
+        }
+
+        .confetti-piece {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: red;
+            opacity: 0.7;
+            animation: fall 3s linear infinite;
+        }
+
+        @keyframes fall {
+            0% {
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) rotate(360deg);
+                opacity: 0;
+            }
+        }
+</style>
 
     <div class="justify-content-center align-items-center" style="display: grid; margin-top: 15px;">
         <div class="card text-center">
@@ -33,8 +66,8 @@
             </div>
             {% endif %}
             <h1><span style="color: {{ request.user.userprofile.font_color }};">{{request.user.userprofile.titulo}}</h1>
-            <div id="counter" class="counter" style="color: {{ request.user.userprofile.font_color }};">
-            </div>
+            <div id="counter" class="counter" style="color: {{ request.user.userprofile.font_color }};"></div>
+            <div class="confetti" id="confetti"></div>
         </div>
      
     </div>
@@ -61,8 +94,31 @@
             if (distance < 0) {
                 clearInterval(countdown);
                 document.getElementById("counter").innerHTML = "O evento começou!";
+                startConfetti();
             }
         }, 1000);
+
+        function startConfetti() {
+                    const confettiContainer = document.getElementById('confetti');
+                    if (confettiContainer) {
+                        for (let i = 0; i < 100; i++) {
+                            const confettiPiece = document.createElement('div');
+                            confettiPiece.className = 'confetti-piece';
+                            confettiPiece.style.left = `${Math.random() * 100}%`;
+                            confettiPiece.style.animationDelay = `${Math.random() * 3}s`;
+                            confettiPiece.style.backgroundColor = getRandomColor();
+                            confettiContainer.appendChild(confettiPiece);
+                        }
+                    }
+                }
+
+        // Função para obter uma cor aleatória
+        function getRandomColor() {
+            const colors = ['red', 'blue', 'green', 'yellow', 'orange', 'purple', 'pink'];
+            return colors[Math.floor(Math.random() * colors.length)];
+        }
+
+
     </script>
 
     <script>
@@ -127,4 +183,5 @@
             }
         }
 </style>
+
 {% endblock %}
