--- a/Core/templates/home.html
+++ b/Core/templates/home.html
@@ -197,9 +197,11 @@
 <div class="highlight-button text-center">
 </div>
 {% else %}
+<!-- Seção compra 
 <div class="highlight-button text-center">
     <a href="{% url 'checkout' %}" class="btn-custom">Compre Agora</a>
 </div>
+-->
 {% endif %}
   <div class="hero">
     <h1>Crie Seu Contador de Eventos Personalizado</h1>
@@ -215,7 +217,7 @@
         <div class="col-md-3">
             <div class="card">
                 <h5 class="card-title">Passo 1: Crie seu Usuário</h5>
-                <p class="card-text">Após o pagamento, crie seu usuário, escolha uma data e o título do seu evento. O contador começará automaticamente.</p>
+                <p class="card-text">crie seu usuário, escolha uma data e o título do seu evento. O contador começará automaticamente.</p>
                 <div class="text-center">
                 <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/add-user-male.png" alt="add-user-male"/>
             </div>
