--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,8 @@
 
     <a class="nav-link" href="{% url 'logout' %}">Sair</a>
     {% else %}
-    <a class="nav-link" href="{% url 'login' %}">Login</a>
+    <a class="nav-link" href="{% url 'register' %}" style="color: aliceblue;">Criar Conta</a>
+    <a class="nav-link" href="{% url 'login' %}" style="color: aliceblue;">Login</a>
     {% endif %}
   </div>
 </nav>
